Description
This ticket adds the missing icons into shell32.
Icon 42 is found here: http://darkobra.deviantart.com/art/Tango-Nature-Icon-163719818
Icon 310 is found here: http://darkobra.deviantart.com/art/Tango-Sony-Ericsson-W850i-Icon-104591325
Icon 314 is the PDA icon from the Gnome Icon Theme.
Attachments
1.
|
[shell32] Add icons for web browser and zip drives |
|
Resolved | gonzoMD |
2.
|
[shell32] Add rename icon |
|
Resolved | gonzoMD |