[SHELL32] Add missing icons. Patch by Jared Smudde CORE-9938

svn path=/trunk/; revision=69237