reactos/dll/win32/shell32/shresdef.h
@@ -335,14 +335,15 @@
 #define IDI_SHELL_SEARCH            23
 #define IDI_SHELL_HELP              24
 #define IDI_SHELL_RUN               25
-/* TODO: 26.ico, 27.ico */
+#define IDI_SHELL_SLEEP				26
+#define IDI_SHELL_HARDWARE_REMOVE	27
 #define IDI_SHELL_SHUTDOWN          28
 #define IDI_SHELL_SHARE             29
 #define IDI_SHELL_SHORTCUT          30
-#define IDI_SHELL_FOLDER_OPEN_SMALL 31 /* ??? */
+#define IDI_SHELL_FOLDER_WAIT       31
 #define IDI_SHELL_EMPTY_RECYCLE_BIN 32
 #define IDI_SHELL_FULL_RECYCLE_BIN  33
-/* TODO: 34.ico */
+#define IDI_SHELL_DIALUP_FOLDER     34
 #define IDI_SHELL_DESKTOP           35
 #define IDI_SHELL_CONTROL_PANEL2    36
 #define IDI_SHELL_PROGRAMS_FOLDER2  37
@@ -350,14 +351,15 @@
 #define IDI_SHELL_FONTS_FOLDER      39
 #define IDI_SHELL_TSKBAR_STARTMENU  40
 #define IDI_SHELL_CD_MUSIC          41
-/* TODO: 42.ico, 43.ico */
+#define IDI_SHELL_TREE              42
+#define IDI_SHELL_COMPUTER_FOLDER   43
 #define IDI_SHELL_FAVORITES         44
 #define IDI_SHELL_LOGOFF            45
 #define IDI_SHELL_EXPLORER          46
 #define IDI_SHELL_UPDATE            47
 #define IDI_SHELL_LOCKED            48
 #define IDI_SHELL_NOT_CONNECTED_HDD 54
-/* TODO: 133.ico */
+#define IDI_SHELL_MULTIPLE_FILES   133
 #define IDI_SHELL_FIND_IN_FILE     134
 #define IDI_SHELL_OPEN_WITH        135
 #define IDI_SHELL_CONTROL_PANEL3   137
@@ -366,7 +368,12 @@
 #define IDI_SHELL_NET_PRINTER      140
 #define IDI_SHELL_FILE_PRINTER     141
 #define IDI_SHELL_TRASH_FILE       142
-/* TODO: 143.ico, 144,ico, 145.ico, 146.ico, 147.ico, 148.ico */
+#define IDI_SHELL_TRASH_FOLDER     143
+#define IDI_SHELL_TRASH_FILE_FOLDER 144
+#define IDI_SHELL_FILE_COPY_DELTE  145
+#define IDI_SHELL_FOLDER_MOVE1     146
+#define IDI_SHELL_FOLDER_RENAME    147
+#define IDI_SHELL_SETTINGS_FOLDER  148
 #define IDI_SHELL_INF_FILE         151
 #define IDI_SHELL_TEXT_FILE        152
 #define IDI_SHELL_BAT_FILE         153
@@ -382,66 +389,98 @@
 #define IDI_SHELL_PRINTER_OK       168
 #define IDI_SHELL_NET_PRINTER_OK   169
 #define IDI_SHELL_FILE_PRINTER_OK  170
-/* TODO: 171.ico */
+#define IDI_SHELL_CHART            171
 #define IDI_SHELL_NETWORK_FOLDER   172
 #define IDI_SHELL_FAVORITES2       173
 #define IDI_SHELL_EXTENDED_PROPERTIES 174
 #define IDI_SHELL_NETWORK_CONNECTIONS 175
+#define IDI_SHELL_NETWORK_CHART    176
+#define IDI_SHELL_VIEW_SETTINGS    177
+#define IDI_SHELL_INTERNET_CHART   178
+#define IDI_SHELL_COMPUTER_SYNC    179
+#define IDI_SHELL_COMPUTER_WINDOW  180
+#define IDI_SHELL_COMPUTER_DESKTOP 181
 
-/* TODO: 176.ico, 177.ico, 178.ico, 179.ico, 180.ico, 181.ico */
+/* Folder Options, General dialog */
+#define IDI_SHELL_SHOW_COMMON_TASKS    182
+#define IDI_SHELL_CLASSIC_FOLDERS      183
+#define IDI_SHELL_OPEN_IN_SOME_WINDOW  184
+#define IDI_SHELL_OPEN_IN_NEW_WINDOW   185
+#define IDI_SHELL_SINGLE_CLICK_TO_OPEN 186
+#define IDI_SHELL_DOUBLE_CLICK_TO_OPEN 187
+
 #define IDI_SHELL_EMPTY_RECYCLE_BIN1 191
 #define IDI_SHELL_FULL_RECYCLE_BIN1  192
-/* TODO: 193.ico, 194.ico, 196.ico, 197.ico, 198.ico, 199.ico, 200.ico */
+#define IDI_SHELL_WEB_FOLDERS      193
+#define IDI_SHELL_SECURITY         194
+/* TODO: 196.ico, 197.ico, 198.ico, 199.ico */
+#define IDI_SHELL_NO               200
 #define IDI_SHELL_FOLDER_OPTIONS   210
 #define IDI_SHELL_USERS2           220
 #define IDI_SHELL_TURN_OFF         221
 #define IDI_SHELL_DVD_ROM          222
-/* TODO: 223.ico */
+#define IDI_SHELL_PAGES            223
 #define IDI_SHELL_MOVIE_FILE       224
 #define IDI_SHELL_MUSIC_FILE       225
 #define IDI_SHELL_PICTURE_FILE     226
-/* TODO: 227.ico */
+#define IDI_SHELL_MULTIMEDIA_FILE  227
 #define IDI_SHELL_CD_MUSIC2        228
-/* TODO: 229.ico */
+#define IDI_SHELL_MOUSE            229
 #define IDI_SHELL_ZIP_DRIVE2       230
-/* TODO: 231.ico, 232.ico */
+#define IDI_SHELL_ARROWN_DOWN      231
+#define IDI_SHELL_ARROWN_DOWN1     232
 #define IDI_SHELL_FDD              233
-/* TODO: 234.ico */
+#define IDI_SHELL_NO_DRIVE         234
 #define IDI_SHELL_MY_DOCUMENTS     235
 #define IDI_SHELL_MY_PICTURES      236
 #define IDI_SHELL_MY_MUSIC         237
 #define IDI_SHELL_MY_MOVIES        238
 #define IDI_SHELL_WEB_BROWSER2     239
 #define IDI_SHELL_FULL_RECYCLE_BIN2 240
-/* TODO: 241.ico */
-#define IDI_SHELL_RENAME            242
-/* TODO: 243.ico, 244.ico */
+#define IDI_SHELL_FILE_MOVE        241
+#define IDI_SHELL_RENAME           242
+#define IDI_SHELL_FILES            243
+#define IDI_SHELL_MOVE_INTERNET    244
 #define IDI_SHELL_PRINTER3         245
 #define IDI_SHELL_ICON_246         246
-/* TODO: 247.ico */
+#define IDI_SHELL_WEB_MUSIC        247
 #define IDI_SHELL_CAMERA           248
 #define IDI_SHELL_SLIDE_SHOW       249
 #define IDI_SHELL_DISPLAY          250
-/* TODO: 251.ico */
+#define IDI_SHELL_WEB_PICS         251
 #define IDI_SHELL_PRINT_PICS       252
-/* TODO: 253.ico */
+#define IDI_SHELL_FILE_CHECK       253
 #define IDI_SHELL_EMPTY_RECYCLE_BIN3 254
 #define IDI_SHELL_ICON_255         255
+#define IDI_SHELL_FOLDER_MOVE2     256
 #define IDI_SHELL_NETWORK_CONNECTIONS2 257
-/* TODO: 256.ico, 258.ico, 259.ico, 260.ico, 261.ico, 262.ico */
+#define IDI_SHELL_NEW_NETWORK_FOLDER 258
+#define IDI_SHELL_NETWORK_HOME     259
+#define IDI_SHELL_CD_EDIT          260
+#define IDI_SHELL_CD_ERASE         261
+#define IDI_SHELL_CD_DELETE        262
 #define IDI_SHELL_HELP1            263
-/* TODO: 264.ico */
+#define IDI_SHELL_FOLDER_POINT     264
 #define IDI_SHELL_SENDMAIL         265
-/* TODO: 266.ico, 267.ico */
+#define IDI_SHELL_CD_POINT         266
+#define IDI_SHELL_SHARED_FOLDER    267
 #define IDI_SHELL_ACCESSABILITY    268
 #define IDI_SHELL_USERS            269
 #define IDI_SHELL_SCREEN_COLORS    270
 #define IDI_SHELL_ADD_REM_PROGRAMS 271
-/* TODO: 272.ico, 273.ico, 274.ico, 275.ico, 276.ico */
+#define IDI_SHELL_PRINTER_MOUSE    272
+#define IDI_SHELL_INTERNET_STATUS  273
+#define IDI_SHELL_SYSTEM_GEAR      274
+#define IDI_SHELL_PIE_CHART        275
+#define IDI_SHELL_INTERNET_DATE    276
 #define IDI_SHELL_TUNES            277
-/* TODO: 278.ico */
+#define IDI_SHELL_CMD              278
+#define IDI_SHELL_CMD              278
 #define IDI_SHELL_USER_ACCOUNTS    279
-/* TODO: 281.ico, 282.ico, 283.ico, 284.ico */
+#define IDI_SHELL_WINDOWS_SEARCH   281
+#define IDI_SHELL_COMPUTER_TEXT    282
+#define IDI_SHELL_OSK              283
+#define IDI_SHELL_ICON_284         284
 #define IDI_SHELL_HELP_FILE        289
 #define IDI_SHELL_GO               290
 #define IDI_SHELL_DVD_DRIVE        291
@@ -453,7 +492,8 @@
 #define IDI_SHELL_DVD_RAM          297
 #define IDI_SHELL_DVDR_ROM         298
 #define IDI_SHELL_MP3_PLAYER       299
-/* TODO: 300.ico, 301.ico */
+#define IDI_SHELL_SERVER           300
+#define IDI_SHELL_SERVER1          301
 #define IDI_SHELL_CD_ROM1          302
 /* TODO: 303.ico */
 #define IDI_SHELL_DVD_ROM1         304
@@ -461,16 +501,18 @@
 /* TODO: 306.ico, 307.ico */
 #define IDI_SHELL_SMART_MEDIA      308
 #define IDI_SHELL_CAMERA1          309
-/* TODO: 310.ico, 311.ico */
+#define IDI_SHELL_PHONE            310
+#define IDI_SHELL_WEB_PRINTER      311
 #define IDI_SHELL_JAZ_DRIVE        312
 #define IDI_SHELL_ZIP_DRIVE        313
-/* TODO: 314.ico */
+#define IDI_SHELL_PDA              314
 #define IDI_SHELL_SCANNER          315
-/* TODO: 316.ico */
+#define IDI_SHELL_IMAGING_DEVICES  316
 #define IDI_SHELL_CAMCORDER        317
 #define IDI_SHELL_DVDRW_ROM        318
 #define IDI_SHELL_NEW_FOLDER       319
-/* TODO: 320.ico, 321.ico */
+#define IDI_SHELL_CD_POINT1        320
+#define IDI_SHELL_CONTROL_PANEL4   321
 #define IDI_SHELL_FAVOTITES        322
 #define IDI_SHELL_SEARCH1          323
 #define IDI_SHELL_HELP2            324
@@ -480,13 +522,18 @@
 #define IDI_SHELL_RUN1             328
 #define IDI_SHELL_SHUTDOWN1        329
 #define IDI_SHELL_CONTROL_PANEL1   330
-/* TODO: 331.ico, 337.ico, 338.ico, 512.ico */
+#define IDI_SHELL_DISCONNECT       331
+#define IDI_SHELL_SEARCH_DIRECTORY 337
+#define IDI_SHELL_DELETE_PERMANENTLY 338
 #define IDI_SHELL_WEB_BROWSER      512
 #define IDI_SHELL_IDEA             1001
 #define IDI_SHELL_PRINTER_OK2      1002
-/* TODO: 1003.ico */
+#define IDI_SHELL_SERVEROK         1003
 #define IDI_SHELL_HELP_FILE1       1004
-/* TODO: 1005.ico, 1006.ico, 1007.ico, 1008.ico, 1009.ico, 1010.ico, 1011.ico */
+#define IDI_SHELL_FILE_MOVE1       1005
+#define IDI_SHELL_FILE_PRINT       1006
+#define IDI_SHELL_FILE_OK          1007
+/* TODO: 1008.ico, 1009.ico, 1010.ico, 1011.ico */
 #define IDI_SHELL_SHUTDOWN2        8240
 
 #define IDI_SHELL_DELETE1 16710
@@ -494,14 +541,6 @@
 #define IDI_SHELL_DELETE3 16717
 #define IDI_SHELL_DELETE4 16718
 #define IDI_SHELL_DELETE5 16721
-
-/* Icons for Folder Options (ID's identical to Windows XP SP3) */
-#define IDI_SHELL_SHOW_COMMON_TASKS    182
-#define IDI_SHELL_CLASSIC_FOLDERS      183
-#define IDI_SHELL_OPEN_IN_SOME_WINDOW  184
-#define IDI_SHELL_OPEN_IN_NEW_WINDOW   185
-#define IDI_SHELL_SINGLE_CLICK_TO_OPEN 186
-#define IDI_SHELL_DOUBLE_CLICK_TO_OPEN 187
 
 /*
  * AVI resources
